plugins {
    id("java")
    id("com.gradleup.shadow") version "8.3.6"
}

group = "dev.sbs"
version = "0.1.0"

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(21))
    }
}

repositories {
    mavenCentral()
    maven(url = "https://central.sonatype.com/repository/maven-snapshots")
    maven(url = "https://jitpack.io")
}

dependencies {
    // Simplified Annotations
    compileOnly(libs.simplified.annotations)
    annotationProcessor(libs.simplified.annotations)
    testCompileOnly(libs.simplified.annotations)
    testAnnotationProcessor(libs.simplified.annotations)

    // Lombok Annotations

    // Tests
    testImplementation(libs.hamcrest)
    testImplementation(libs.junit.jupiter.api)
    testRuntimeOnly(libs.junit.jupiter.engine)
    testImplementation(libs.junit.platform.launcher)
    testImplementation(libs.spring.boot.starter.test)

    // Server framework - transitively provides spring-boot-starter-web and
    // spring-boot-starter-actuator via api() exports. Phase 6b.3 swapped the
    // previous spring-boot-starter + spring-boot-starter-actuator pair for this
    // single dep so the Spring setup matches server / server-api, and
    // data picks up the servlet container required for the
    // /actuator/prometheus scrape endpoint. API key authentication is disabled
    // in application.properties because data exposes no REST
    // endpoints to protect.
    implementation("com.github.simplified-dev:spring-framework") { version { strictly("6c1497b") } }

    // Micrometer Prometheus registry - Phase 6b.3. Version pinned explicitly via
    // the catalog to avoid drift against Spring Boot's managed dependencies
    // since data does not import spring-boot-dependencies as a BOM.
    implementation(libs.micrometer.registry.prometheus)

    // Hazelcast - promoted from runtimeOnly to implementation in Phase 6b because
    // PersistenceConfig now references HazelcastInstance + HazelcastClient directly
    // for the write-path bean, the WriteQueueConsumer uses IQueue<WriteRequest>
    // as its drain entry point, and the WriteBatchScheduler iterates the registry
    // via an IMap for the dead-letter dump. Earlier phases only used Hazelcast
    // indirectly through the JCache SPI which is why runtimeOnly was sufficient.
    implementation(libs.hazelcast)

    // Simplified infrastructure (formerly transitive via minecraft-api)
    implementation("com.github.simplified-dev:client") { version { strictly("2ced9a4") } }
    implementation("com.github.simplified-dev:gson-extras") { version { strictly("ed1d77e") } }

    // Split minecraft-api modules - data only consumes the persistence API.
    // SkyBlockData, the corpus models and minecraft-text (transitively via api()) flow in from
    // this one dependency.
    implementation("com.github.simplified-api:skyblock") { version { strictly("d566734") } }

    // The shared SkyBlock-Simplified library, which owns the envelope the write queue carries -
    // one definition of the wire format, spoken by the producer and by this consumer.
    implementation("com.github.skyblock-simplified:api:master-SNAPSHOT")

    // The corpus client - GitHubCorpus and its write instruction. Reached directly because this
    // deployment is the one that holds a token, and holding one is the whole of what makes it a
    // writer.
    implementation("com.github.simplified-api:github") { version { strictly("b64127c") } }

    implementation("com.github.simplified-dev:persistence") { version { strictly("2d6b0e7") } }
    implementation("com.github.simplified-dev:collections") { version { strictly("9696ca5") } }
}

tasks {
    withType<JavaCompile> {
        options.compilerArgs.add("-parameters")
    }

    test {
        useJUnitPlatform()
    }

    shadowJar {
        archiveClassifier.set("")
        mergeServiceFiles()
        append("META-INF/spring.factories")
        append("META-INF/spring/org.springframework.boot.autoconfigure.AutoConfiguration.imports")

        manifest {
            attributes["Main-Class"] = "dev.sbs.data.SimplifiedData"
            attributes["Multi-Release"] = "true"
        }

        exclude("META-INF/INDEX.LIST", "META-INF/*.SF", "META-INF/*.DSA", "META-INF/*.RSA")
    }

    build {
        dependsOn(shadowJar)
    }

    register<Exec>("deploy") {
        description = "Build and deploy to remote Docker host via SSH over VPN"
        group = "deployment"
        dependsOn(shadowJar)

        doFirst {
            project.file(".env").readLines()
                .filter { it.contains('=') && !it.startsWith('#') }
                .forEach { environment(it.substringBefore('='), it.substringAfter('=')) }
        }

        commandLine("docker", "compose", "up", "-d", "--build", "--remove-orphans")
    }
}
